                        User-Visible lbcd Changes

lbcd 3.3.0 (2006-10-06)

    Add the -S option, which says to return load and user information
    unmolested when replying to version two queries rather than setting
    all of the loads to the calculated weight of the first service and
    zeroing the user information.

    Add considerably better documentation on what weight the default load
    service calculates, including its various adjustments based on the
    number of logged-in users.

lbcd 3.2.6 (2006-05-16)

    When building from a different build directory than the source
    directory, the makefile built and looked for the man pages in the
    wrong path.  Look for and build man pages in the source directory.

lbcd 3.2.5 (2006-04-10)

    Fixed a misuse of the third argument to waitpid that was causing use
    of a command to generate weights to fail on some platforms.

lbcd 3.2.4 (2006-03-17)

    Document lbcd's behavior on hosts with multiple addresses and the use
    of -b and running multiple instances of lbcd to ensure that replies
    go out from the right source address.  Unfortunately, the design of
    the Unix UDP API makes it more difficult than it's worth to try to
    reply to incoming packets with the source address of the interface on
    which they were received.

lbcd 3.2.3 (2005-02-24)

    Added the -b option to lbcd to bind to only the specified address
    instead of all available addresses.

lbcd 3.2.2 (2004-11-16)

    Documentation updates, including adding a README file and reformatting
    documentation to match other Stanford packages.  Added URL information
    to the manual pages.

lbcd 3.2.1 (2004-09)

    Fixed a long-standing bug in round-robin (-R) mode when responding to
    v2 requests.  The response packet was not being correctly changed on
    Linux and other little-endian systems.

    Set the 5 and 15 minute load to a constant value as well as the 1
    minute load when using round-robin, just in case.
